@@ -1,5 +1,7 @@
 Version 1.7 -Eta Carinae-
 
+* [NEW] Added an Edit CSS feature, with fancy display of css and fast editor form
+* [NEW] Added a setup_virtual.sh for virtual hosting, and changed internal code accordingly
 * [NEW] Added a general Calendar feature for tiki content browsing and groups calendar
   management. Uses overlib and some javascript enhancements.
 * [NEW] Added a MODULE plugin to display modules inside wiki pages
